添加了树形功能

--- a/html/tree.html
+++ b/html/tree.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="utf-8">
     <title>具体树图</title>
-    <link rel="stylesheet" type="text/css" href="../css/detail.css">
+    <link rel="stylesheet" type="text/css" href="../css/tree.css">
     <link rel="stylesheet" href="../css/bootstrap.css">
     <link href="../css/bootstrap-datetimepicker.min.css" rel="stylesheet" media="screen">
 </head>
 
 <body>
+    <div id="container" style="width:1000px;height:900px;margin:0 auto"></div>
 
 </body>
 <script type="text/javascript" src="../js/jquery.js"></script>
@@ -17,6 +18,7 @@
 <script type="text/javascript" src="../js/api.js"></script>
 <script type="text/javascript" src="../js/echarts.js"></script>
 <script type="text/javascript" src="../js/tree.js"></script>
+
 
 
 </html>
