--- a/html/tree.html
+++ b/html/tree.html
@@ -47,7 +47,7 @@
 <script type="text/javascript" src="../js/jquery.js"></script>
 <script type="text/javascript" src="../js/url.js"></script>
 <script type="text/javascript" src="../js/echarts.js"></script>
-<script type="text/javascript" src="../js/tree.js"></script>
+<script type="text/javascript" src="../js/test.js"></script>
 <script type="text/javascript" src="../js/bootstrap-datetimepicker.js"></script>
 
 <script type="text/javascript">
