修改前台展示的宽度比例问题

--- a/front/html/main.html
+++ b/front/html/main.html
@@ -71,6 +71,8 @@
 
         <!-- 异常报警按钮 -->
         <button class="btn btn-lg btn-danger" id="alarm">异常报警</button>
+        <!-- 后台管理系统的入口 -->
+        <button class="btn btn-lg btn-info" id="manageEntrance">管理系统入口</button>
 
         <!-- 在底图上设置动态的覆盖图层进行显示 -->
         <!-- 变电站的状态图层 -->
