--- a/front/html/tree.html
+++ b/front/html/tree.html
@@ -47,8 +47,8 @@
 <script type="text/javascript" src="../js/jquery.js"></script>
 <script type="text/javascript" src="../js/url.js"></script>
 <script type="text/javascript" src="../js/echarts.js"></script>
-<script type="text/javascript" src="../js/test.js"></script>
-<!-- <script type="text/javascript" src="../js/tree.js"></script> -->
+<!-- <script type="text/javascript" src="../js/test.js"></script> -->
+<script type="text/javascript" src="../js/tree.js"></script>
 <script type="text/javascript" src="../js/bootstrap-datetimepicker.js"></script>
 
 <script type="text/javascript">
