修改后台管理系统的线路管理bug

--- a/manage/index.html
+++ b/manage/index.html
@@ -13,7 +13,9 @@
 
 <body class="layui-layout-body">
     <div id="main" class="layui-tab layui-tab-card">
-        <div id="title">电力设备状态监测系统</div>
+        <div id="title">
+            电力设备状态监测系统 <button type="button" class="layui-btn layui-btn-primary" id="logout">退出</button>
+        </div>
         <ul class="layui-tab-title">
             <li class="layui-this" id="user_manage_tab">用户管理</li>
             <li id="line_type_manage_tab">参数管理</li>
