--- a/front/html/main.html
+++ b/front/html/main.html
@@ -271,7 +271,7 @@
     var h = myDate.getHours(); //获取当前小时数(0-23)
     var m = myDate.getMinutes(); //获取当前分钟数(0-59)
     var s = myDate.getSeconds();
-    var now = year + '-' + getNow(month) + "-" + getNow(date) + "" + getNow(h) + ':' + getNow(m) + ":" + getNow(s);
+    var now = year + '-' + getNow(month) + "-" + getNow(date) + " " + getNow(h) + ':' + getNow(m) + ":" + getNow(s);
 
     $("#datetime1").attr("data-date", now);
     $("#datetime2").attr("data-date", now);
@@ -287,6 +287,7 @@
         forceParse: 0,
         format: 'yyyy-mm-dd hh:00',
     });
+    console.log(12312)
 </script>
 <script type="text/javascript" src="../js/main.js"></script>
 <script type="text/javascript" src="../js/adjust.js"></script>
