修改拓扑图中的距离长度显示，同时修改线路管理中的细节

--- a/manage/index.html
+++ b/manage/index.html
@@ -379,7 +379,7 @@
                             <div class="layui-inline">
                                 <label class="layui-form-label">线路名称</label>
                                 <div class="layui-input-inline">
-                                    <input type="text" class="layui-input" lay-verify="required" id="TreeName2">
+                                    <input type="text" class="layui-input" lay-verify="required" id="TreeName2" placeholder="请输入线路后再选择父节点">
                                 </div>
                             </div>
                         </div>
