--- a/front/html/main.html
+++ b/front/html/main.html
@@ -90,17 +90,17 @@
         <div class="flag" order="11" id="flag11"></div>
 
         <!-- 电流、电阻的显示曲线 -->
-        <div class="I_history" id="I_history1" order="1">I</div>
-        <div class="I_history" id="I_history2" order="2">I</div>
-        <div class="I_history" id="I_history3" order="3">I</div>
-        <div class="I_history" id="I_history4" order="4">I</div>
-        <div class="I_history" id="I_history5" order="5">I</div>
-        <div class="I_history" id="I_history6" order="6">I</div>
-        <div class="I_history" id="I_history7" order="7">U</div>
-        <div class="I_history" id="I_history8" order="8">I</div>
-        <div class="I_history" id="I_history9" order="9">I</div>
-        <div class="I_history" id="I_history10" order="10">I</div>
-        <div class="I_history" id="I_history11" order="11">R</div>
+        <div class="I_history" id="I_history1" order="1">I<sub>0</sub></div>
+        <div class="I_history" id="I_history2" order="2">I<sub>0</sub></div>
+        <div class="I_history" id="I_history3" order="3">I<sub>0</sub></div>
+        <div class="I_history" id="I_history4" order="4">I<sub>0</sub></div>
+        <div class="I_history" id="I_history5" order="5">I<sub>0</sub></div>
+        <div class="I_history" id="I_history6" order="6">I<sub>0</sub></div>
+        <div class="I_history" id="I_history7" order="7">U<sub>0</sub></div>
+        <div class="I_history" id="I_history8" order="8">I<sub>0</sub></div>
+        <div class="I_history" id="I_history9" order="9">I<sub>0</sub></div>
+        <div class="I_history" id="I_history10" order="10">I<sub>0</sub></div>
+        <div class="I_history" id="I_history11" order="11">I<sub>r</sub></div>
 
         <!-- 各变电站的表格信息 -->
         <div id="tableInfo"></div>
@@ -124,25 +124,17 @@
                             <!-- onmousedown="if(this.options.length>4){this.size=5}" onblur="this.size=1" onchange="this.size=1" id="deviceIDs" -->
                             <select class="form-control" id="deviceIDs">
                                 <option value="">请选择设备号</option>
-                                <option value="23">箱变一</option>
-                                <option value="26">箱变二</option>
-                                <option value="24">箱变八</option>
-                                <option value="25">箱变十</option>
-                                <option value="21">箱变六</option>
-                                <option value="1">分支箱一2号线</option>
-                                <option value="2">分支箱一3号线</option>
-                                <option value="4">分支箱二3号线</option>
-                                <option value="3">分支箱二4号线</option>
-                                <option value="14">分支箱三5号线</option>
-                                <option value="13">分支箱三13号线</option>
-                                <option value="6">分支箱四6号线</option>
-                                <option value="5">分支箱四7号线</option>
-                                <option value="8">分支箱五8号线</option>
-                                <option value="7">分支箱五9号线</option>
-                                <option value="10">分支箱七13号线</option>
-                                <option value="9">分支箱七14号线</option>
-                                <option value="12">分支箱八15号线</option>
-                                <option value="11">分支箱八16号线</option>
+                                <option value="1">4#风电机组</option>
+                                <option value="2">5#风电机组</option>
+                                <option value="3">6#风电机组</option>
+                                <option value="4">7#风电机组</option>
+                                <option value="5">8#风电机组</option>
+                                <option value="6">9#风电机组</option>
+                                <option value="7">PT</option>
+                                <option value="8">3923</option>
+                                <option value="9">3921</option>
+                                <option value="10">3935</option>
+                                <option value="11">接地电流</option>
                             </select>
                         </div>
                         <div class="container" style="width: 600px;" id="container_2">
